fix some mistakes in docs and middlewares. Fix presenters
